--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       <div id="items-list"></div>
       <div class="empty" id="empty-hint" style="display:none;">Nenhum item na sessão.</div>
     </section>
+    
+    <div class="actions">
+      <span>Total: <strong id="order-total">R$ 0,00</strong></span>
+      <button id="save-btn"   type="button">Salvar</button>
+      <button id="submit-btn" type="button">Enviar pedido</button>
+    </div>
+   
   </main>
 
   <footer>
