--- a/index.html
+++ b/index.html
@@ -37,5 +37,17 @@
 
   <script src="/config.js"></script>
   <script type="module" src="/app.js"></script>
+
+  <div id="actions-bar" class="actions-bar">
+    <div class="actions-inner">
+      <div class="total">Total: <strong id="order-total">R$ 0,00</strong></div>
+      <div class="buttons">
+        <button id="save-btn"   type="button">Salvar</button>
+        <button id="submit-btn" type="button">Enviar pedido</button>
+      </div>
+    </div>
+  </div>
+
+  
 </body>
 </html>
