--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="theme-color" content="#2563eb">
   <title>Pedido — Wise Sales</title>
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
   <header>
-    <h1>Revisar pedido</h1>
+    <h1>📋 Revisar Pedido</h1>
     <p id="session-info"></p>
   </header>
 
@@ -17,22 +20,28 @@
 
     <section id="items-section" class="card">
       <div class="card-header">
-        <h2>Itens do pedido</h2>
+        <h2>🛒 Itens do Pedido</h2>
       </div>
       <div id="items-list"></div>
-      <div class="empty" id="empty-hint" style="display:none;">Nenhum item na sessão.</div>
+      <div class="empty" id="empty-hint" style="display:none;">
+        <div style="font-size: 48px; margin-bottom: 16px;">📦</div>
+        <p>Nenhum item encontrado na sessão</p>
+        <small>Os itens aparecerão aqui quando adicionados</small>
+      </div>
     </section>
     
     <div class="actions">
-      <span>Total: <strong id="order-total">R$ 0,00</strong></span>
-      <button id="save-btn"   type="button">Salvar</button>
-      <button id="submit-btn" type="button">Enviar pedido</button>
+      <span>💰 Total: <strong id="order-total">R$ 0,00</strong></span>
+      <div style="display: flex; gap: 12px;">
+        <button id="save-btn" type="button">💾 Salvar</button>
+        <button id="submit-btn" type="button">🚀 Enviar Pedido</button>
+      </div>
     </div>
    
   </main>
 
   <footer>
-    <small>Link pessoal e temporário. Não compartilhe.</small>
+    <small>🔒 Link pessoal e temporário. Não compartilhe.</small>
   </footer>
 
   <script src="/config.js"></script>
@@ -40,10 +49,10 @@
 
   <div id="actions-bar" class="actions-bar">
     <div class="actions-inner">
-      <div class="total">Total: <strong id="order-total">R$ 0,00</strong></div>
+      <div class="total">💰 Total: <strong id="footer-total">R$ 0,00</strong></div>
       <div class="buttons">
-        <button id="save-btn"   type="button">Salvar</button>
-        <button id="submit-btn" type="button">Enviar pedido</button>
+        <button id="save-btn" type="button">💾 Salvar</button>
+        <button id="submit-btn" type="button">🚀 Enviar</button>
       </div>
     </div>
   </div>
