Corrigir botões da barra flutuante e padronizar interface

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="actions">
       <span>💰 Total: <strong id="order-total">R$ 0,00</strong></span>
       <div style="display: flex; gap: 12px;">
-        <button id="save-btn" type="button">💾 Salvar</button>
-        <button id="submit-btn" type="button">🚀 Enviar Pedido</button>
+        <button id="main-save-btn" type="button">💾 Salvar</button>
+        <button id="main-submit-btn" type="button">🚀 Enviar Pedido</button>
       </div>
     </div>
    
@@ -51,8 +51,8 @@
     <div class="actions-inner">
       <div class="total">💰 Total: <strong id="footer-total">R$ 0,00</strong></div>
       <div class="buttons">
-        <button id="save-btn" type="button">💾 Salvar</button>
-        <button id="submit-btn" type="button">🚀 Enviar</button>
+        <button id="footer-save-btn" type="button">💾 Salvar</button>
+        <button id="footer-submit-btn" type="button">🚀 Enviar Pedido</button>
       </div>
     </div>
   </div>
