Add Sequential Order Number System

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <header>
     <h1>📋 Revisar Pedido</h1>
     <p id="session-info"></p>
+    <p id="order-preview" style="font-size: 14px; opacity: 0.9; margin: 8px 0 0;"></p>
   </header>
 
   <main>
