Add Complete Customer Info to Order Header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <header>
     <h1>📋 Revisar Pedido</h1>
+    <div id="customer-info"></div>
     <p id="session-info"></p>
     <p id="order-preview" style="font-size: 14px; opacity: 0.9; margin: 8px 0 0;"></p>
   </header>
