--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <h1>📋 Revisar Pedido</h1>
-    <div id="customer-info"></div>
+    <div id="customer-info" style="margin: 16px 0;"></div>
     <p id="session-info"></p>
     <p id="order-preview" style="font-size: 14px; opacity: 0.9; margin: 8px 0 0;"></p>
   </header>
