Adicionar botão de produtos na barra flutuante

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <div class="actions-inner">
       <div class="total">💰 Total: <strong id="footer-total">R$ 0,00</strong></div>
       <div class="buttons">
+        <button id="footer-add-product-btn" type="button">➕ Adicionar</button>
         <button id="footer-save-btn" type="button">💾 Salvar</button>
         <button id="footer-submit-btn" type="button">🚀 Enviar Pedido</button>
       </div>
