Ajustar botões da barra flutuante para mobile

--- a/index.html
+++ b/index.html
@@ -75,9 +75,13 @@
     <div class="actions-inner">
       <div class="total">💰 Total: <strong id="footer-total">R$ 0,00</strong></div>
       <div class="buttons">
-        <button id="footer-add-product-btn" type="button">➕ Adicionar</button>
-        <button id="footer-save-btn" type="button">💾 Salvar</button>
-        <button id="footer-submit-btn" type="button">🚀 Enviar Pedido</button>
+        <button id="footer-add-product-btn" type="button">
+          ➕ <span class="btn-text">Adicionar</span>
+        </button>
+        <button id="footer-save-btn" type="button">
+          💾 <span class="btn-text">Salvar</span>
+        </button>
+        <button id="footer-submit-btn" type="button">🚀 Enviar</button>
       </div>
     </div>
   </div>
