Adicionar botão de produto na barra do rodapé

--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
         <button id="footer-add-product-btn" type="button">
           ➕ <span class="btn-text">Adicionar</span>
         </button>
+        <button id="footer-add-product-btn" type="button">
+          ➕ <span class="btn-text">Adicionar</span>
+        </button>
         <button id="footer-save-btn" type="button">
           💾 <span class="btn-text">Salvar</span>
         </button>
-        <button id="footer-submit-btn" type="button">🚀 Enviar</button>
+        <button id="footer-submit-btn" type="button">🚀 <span class="btn-text">Enviar</span></button>
       </div>
     </div>
   </div>
