--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="actions">
       <span>💰 Total: <strong id="order-total">R$ 0,00</strong></span>
       <div style="display: flex; gap: 12px;">
+        <button id="main-add-product-btn" type="button">➕ Adicionar Produto</button>
         <button id="main-save-btn" type="button">💾 Salvar</button>
         <button id="main-submit-btn" type="button">🚀 Enviar Pedido</button>
       </div>
