Simplificar textos dos botões principais

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div style="display: flex; gap: 12px;">
         <button id="main-add-product-btn" type="button">➕ Adicionar Produto</button>
         <button id="main-save-btn" type="button">💾 Salvar</button>
-        <button id="main-submit-btn" type="button">🚀 Enviar Pedido</button>
+        <button id="main-submit-btn" type="button">🚀 Enviar</button>
       </div>
     </div>
    
