Ajustar barra principal mobile igual à flutuante

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div class="actions">
       <span>💰 Total: <strong id="order-total">R$ 0,00</strong></span>
       <div style="display: flex; gap: 12px;">
-        <button id="main-add-product-btn" type="button">➕ Adicionar Produto</button>
-        <button id="main-save-btn" type="button">💾 Salvar</button>
-        <button id="main-submit-btn" type="button">🚀 Enviar</button>
+        <button id="main-add-product-btn" type="button">➕ <span class="btn-text">Adicionar</span></button>
+        <button id="main-save-btn" type="button">💾 <span class="btn-text">Salvar</span></button>
+        <button id="main-submit-btn" type="button">🚀 <span class="btn-text">Enviar</span></button>
       </div>
     </div>
    
