Corrigir visibilidade do ícone e tamanho do botão

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="actions">
       <span>💰 Total: <strong id="order-total">R$ 0,00</strong></span>
       <div style="display: flex; gap: 12px;">
-        <button id="main-add-product-btn" type="button">➕ <span class="btn-text">Adicionar</span></button>
+        <button id="main-add-product-btn" type="button">✚ <span class="btn-text">Adicionar</span></button>
         <button id="main-save-btn" type="button">💾 <span class="btn-text">Salvar</span></button>
         <button id="main-submit-btn" type="button">🚀 <span class="btn-text">Enviar</span></button>
       </div>
@@ -77,7 +77,7 @@
       <div class="total">💰 Total: <strong id="footer-total">R$ 0,00</strong></div>
       <div class="buttons">
         <button id="footer-add-product-btn" type="button">
-          ➕ <span class="btn-text">Adicionar</span>
+          ✚ <span class="btn-text">Adicionar</span>
         </button>
         <button id="footer-save-btn" type="button">
           💾 <span class="btn-text">Salvar</span>
