Corrigir ícone do cabeçalho e aumentar botões

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="items-section" class="card">
       <div class="card-header">
         <h2>🛒 Itens do Pedido</h2>
-        <button id="add-product-btn" type="button" class="btn-add-product">➕ Adicionar Produto</button>
+        <button id="add-product-btn" type="button" class="btn-add-product">✚ Adicionar Produto</button>
       </div>
       <div id="items-list"></div>
       <div class="empty" id="empty-hint" style="display:none;">
