--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="items-list"></div>
       <div class="empty" id="empty-hint" style="display:none;">
         <div style="font-size: 48px; margin-bottom: 16px;">📦</div>
-        <p>Nenhum item encontrado na sessão</p>
+        <p>Nenhum item encontrado no orçamento</p>
         <small>Os itens aparecerão aqui quando adicionados</small>
       </div>
     </section>
