Update header title to include 'DEV'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1>📋 Revisar Orçamento</h1>
+    <h1>📋 Revisar Orçamento - DEV</h1>
     <div id="customer-info" style="margin: 16px 0;"></div>
     <p id="session-info"></p>
     <p id="order-preview" style="font-size: 14px; opacity: 0.9; margin: 8px 0 0;"></p>
